--- a/apps/superApp/src/styles/globals.css
+++ b/apps/superApp/src/styles/globals.css
@@ -78,3 +78,7 @@ h6 {
   border: 1px solid #f0eded !important;
   border-radius: 0px 0 0 0px !important;
 }
+
+.select-input{
+  background-color: #28b934 !important;
+}
