--- a/apps/potta/src/app/globals.css
+++ b/apps/potta/src/app/globals.css
@@ -3,8 +3,8 @@
 @tailwind utilities;
 
 @font-face {
-  font-family: "OutfitBold";
-  src: url("/fonts/Outfit-Regular.ttf") format("truetype");
+  font-family: 'OutfitBold';
+  src: url('/fonts/Outfit-Regular.ttf') format('truetype');
 }
 *,
 p,
@@ -41,7 +41,7 @@ label {
 }
 
 .css-1097eso::before {
-  content: "›" !important; /* Left-pointing arrow */
+  content: '›' !important; /* Left-pointing arrow */
   position: absolute !important; /* Positioning the arrow */
   left: 0 !important; /* Align to the left */
   top: 34% !important; /* Center vertically */
@@ -130,4 +130,70 @@ label {
   border-left: 0px solid rgba(255, 255, 255, 1) !important;
   border-right: 0px solid rgba(255, 255, 255, 1) !important;
   border-radius: 0px !important;
+}
+
+/* From Uiverse.io by Shoh2008 */
+.lds-ellipsis {
+  display: inline-block;
+  position: relative;
+}
+
+.lds-ellipsis div {
+  position: absolute;
+  top: 33px;
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  background: #000;
+  animation-timing-function: cubic-bezier(0, 1, 1, 0);
+}
+
+.lds-ellipsis div:nth-child(1) {
+  left: 8px;
+  animation: lds-ellipsis1 0.6s infinite;
+}
+
+.lds-ellipsis div:nth-child(2) {
+  left: 8px;
+  animation: lds-ellipsis2 0.6s infinite;
+}
+
+.lds-ellipsis div:nth-child(3) {
+  left: 32px;
+  animation: lds-ellipsis2 0.6s infinite;
+}
+
+.lds-ellipsis div:nth-child(4) {
+  left: 56px;
+  animation: lds-ellipsis3 0.6s infinite;
+}
+
+@keyframes lds-ellipsis1 {
+  0% {
+    transform: scale(0);
+  }
+
+  100% {
+    transform: scale(1);
+  }
+}
+
+@keyframes lds-ellipsis3 {
+  0% {
+    transform: scale(1);
+  }
+
+  100% {
+    transform: scale(0);
+  }
+}
+
+@keyframes lds-ellipsis2 {
+  0% {
+    transform: translate(0, 0);
+  }
+
+  100% {
+    transform: translate(24px, 0);
+  }
 }
