--- a/apps/potta/src/app/globals.css
+++ b/apps/potta/src/app/globals.css
@@ -124,6 +124,19 @@ label {
   margin-right: 5px !important;
   margin-bottom: 10px !important;
 }
+.animate-fade-in {
+  animation: fadeIn 0.2s cubic-bezier(0.4, 0, 0.2, 1);
+}
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+    transform: translateY(16px) scale(0.98);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0) scale(1);
+  }
+}
 
 .ps-active {
   background: #154406 !important;
