--- a/apps/potta/src/app/globals.css
+++ b/apps/potta/src/app/globals.css
@@ -4,15 +4,15 @@
 
 /* Print styles for cash flow reports */
 @media print {
-  .print\\:hidden {
+  [class*="print:hidden"] {
     display: none !important;
   }
 
-  .print\\:p-4 {
+  [class*="print:p-4"] {
     padding: 1rem !important;
   }
 
-  .print\\:space-y-4 > * + * {
+  [class*="print:space-y-4"] > * + * {
     margin-top: 1rem !important;
   }
 
